💄 MT-1026 Fix spacing (#398)

--- a/src/scss/components/_report.scss
+++ b/src/scss/components/_report.scss
@@ -3,7 +3,7 @@
 
 .report {
   span:first-child {
-    margin-bottom: var(--spacer-xx-small);
+    margin-bottom: var(--spacer-xxx-small);
   }
   .text + .report-list {
     margin-top: var(--spacer-x-small);
